--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,7 @@ jobs:
         cache: maven
     - name: Build with Maven
       # run: mvn -B package --file pom.xml
-      run: pwd
+      run: ls # /home/runner/work/cicd-demo/cicd-demo
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
