--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -61,8 +61,7 @@ jobs:
 
     - name: Build and analyze on SonarCloud
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information,
-        if any
+        # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information,
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -
       Dsonar.projectKey=yfchaw_cicd-demo
