--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -63,8 +63,7 @@ jobs:
       env:
         # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information,
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -
-      Dsonar.projectKey=yfchaw_cicd-demo
+      run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=yfchaw_cicd-demo
 
 
 
