--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,13 +38,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-          cache: maven
+      # - uses: actions/checkout@v3
+      # - name: Set up JDK 17
+      #   uses: actions/setup-java@v3
+      #   with:
+      #     java-version: '17'
+      #     distribution: 'temurin'
+      #     cache: maven
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
@@ -62,7 +62,7 @@ jobs:
 
       - name: Build and analyze on SonarCloud
         env:
-          # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information,
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: cd /home/runner/work/cicd-demo/cicd-demo/d13 && mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=yfchaw_cicd-demo
 
