--- a/d13/pom.xml
+++ b/d13/pom.xml
@@ -14,9 +14,11 @@
 	<name>d13revision</name>
 	<description>Day 13 revision project for Spring Boot</description>
 	<properties>
-		<java.version>17</java.version>
+		<!-- <java.version>17</java.version> -->
+
 		<sonar.organization>yfchaw</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+
 	</properties>
 	<dependencies>
 		<dependency>
