sonar cloud integration

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -64,8 +64,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }} # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        # run: cd /home/runner/work/cicd-demo/cicd-demo/d13 && mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=yfchaw_cicd-demo
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=yfchaw_cicd-demo
+        run: cd /home/runner/work/cicd-demo/cicd-demo/d13 && mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=yfChaw_cicd-demo
+        # run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=yfchaw_cicd-demo
 
 
 
