--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -77,13 +77,19 @@ jobs:
         continue-on-error: True # To make sure that SARIF upload gets called
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      #   with:
+      #     args: --sarif-file-output=snyk.sarif
+      # - name: Upload result to Github Code Scanning
+      #   uses: github/codeql-action/upload-sarif@v2
+      #   with:
+      #     sarif_file: snyk.sarif
+
         with:
-          args: --sarif-file-output=snyk.sarif
-      - name: Upload result to Github Code Scanning
-        uses: github/codeql-action/upload-sarif@v2
+          args: --sarif-file-output=snyk.sarif --file=./Orso.Arpa.Api.sln --severity-threshold=medium
+      - name: Upload result to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: snyk.sarif
-
 
 
 ############### without sonar cloud
