--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -85,7 +85,9 @@ jobs:
       #     sarif_file: snyk.sarif
 
         with:
-          args: --sarif-file-output=snyk.sarif
+          # args: --sarif-file-output=snyk.sarif
+          image: part2
+          args: --file=Dockerfile
       - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v3
         with:
