--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -74,7 +74,7 @@ jobs:
       - uses: actions/checkout@master
       - name: Run snyk to check for vulnerabilities
         uses: snyk/actions/maven@master
-        working-directory: /home/runner/work/cicd-demo/cicd-demo/d13
+        # working-directory: /home/runner/work/cicd-demo/cicd-demo/d13
         continue-on-error: True # To make sure that SARIF upload gets called
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
@@ -86,12 +86,12 @@ jobs:
       #     sarif_file: snyk.sarif
 
         with:
-          args: --sarif-file-output=snyk.sarif
+          args: --file=/home/runner/work/cicd-demo/cicd-demo/d13/pom.xml --sarif-file-output=snyk.sarif
           # image: part2
           # args: --file=Dockerfile
       - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v3
-        working-directory: /home/runner/work/cicd-demo/cicd-demo/d13
+        # working-directory: /home/runner/work/cicd-demo/cicd-demo/d13
         with:
           sarif_file: snyk.sarif
 
