--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -85,6 +85,8 @@ jobs:
 
       - name: snyk test
         run: cd /home/runner/work/cicd-demo/cicd-demo/d13 && snyk test --sarif-file-output=snyk.sarif
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
 # have to do the above manual setup as the path spoilt!!!!
 
