--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -86,7 +86,7 @@ jobs:
         uses: snyk/actions/setup@master
 
       - name: snyk test
-        run: cd /home/runner/work/cicd-demo/cicd-demo/d13 && SNYK_TOKEN=${{ secrets.SNYK_TOKEN }} snyk test --sarif-file-output=snyk.sarif
+        run: cd /home/runner/work/cicd-demo/cicd-demo/d13 && SNYK_TOKEN=${{ secrets.SNYK_TOKEN }} snyk test --severity-threshold=critical --sarif-file-output=snyk.sarif
         # env:
         #   SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
           # https://docs.snyk.io/snyk-cli/commands/auth
